name:                cache
version:             0.1.1
synopsis:            TTL cache
description:         TTL cache
homepage:            https://github.com/collegevine/cache#readme
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralph@collegevine.com
copyright:           Collegevine
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Cache.Types, Data.Cache
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.1
                     , time >= 1.5.0.1
                     , stm >= 2.4.4.1
                     , lens >= 4.13
                     , text >= 1.2.2.1
                     , containers >= 0.5.6.2
                     , unordered-containers >= 0.2.7.0
                     , hashable >= 1.2.4.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/collegevine/cache
